crates/backyard-parser/tests/snapshots/staticlookup__bracket.snap
---
source: crates/backyard-parser/tests/staticlookup.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: static_lookup
    left:
      node_type: self_keyword
      loc:
        start:
          line: 1
          column: 0
          offset: 0
        end:
          line: 1
          column: 0
          offset: 0
      leadings: ~
      trailings: ~
    right:
      node_type: variable
      name:
        node_type: identifier
        name:
          - 97
        loc:
          start:
            line: 1
            column: 7
            offset: 7
          end:
            line: 1
            column: 8
            offset: 8
        leadings: ~
        trailings: ~
      loc:
        start:
          line: 1
          column: 7
          offset: 7
        end:
          line: 1
          column: 8
          offset: 8
      leadings: ~
      trailings: ~
    use_bracket: true
    loc:
      start:
        line: 1
        column: 4
        offset: 4
      end:
        line: 1
        column: 9
        offset: 9
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 10
    offset: 10
leadings: ~
trailings: ~
