crates/backyard-parser/tests/snapshots/staticlookup__class.snap
---
source: crates/backyard-parser/tests/staticlookup.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: static_lookup
    left:
      node_type: self_keyword
      loc:
        start:
          line: 1
          column: 0
          offset: 0
        end:
          line: 1
          column: 0
          offset: 0
      leadings: []
      trailings: []
    right:
      node_type: class_keyword
      loc:
        start:
          line: 1
          column: 6
          offset: 6
        end:
          line: 1
          column: 6
          offset: 6
      leadings: []
      trailings: []
    use_bracket: false
    loc:
      start:
        line: 1
        column: 4
        offset: 4
      end:
        line: 1
        column: 6
        offset: 6
    leadings: []
    trailings: []
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 11
    offset: 11
leadings: []
trailings: []
